--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "linebot": "^1.4.1",
+    "lodash.isboolean": "^3.0.3",
+    "lodash.pick": "^4.4.0",
     "mongoose": "^5.4.14",
     "mongoose-timestamp": "^0.6.0",
     "morgan": "~1.9.0",
