--- a/package.json
+++ b/package.json
@@ -22,11 +22,8 @@
     "mongoose": "^5.4.14",
     "mongoose-timestamp": "^0.6.0",
     "morgan": "~1.9.0",
-    "sharp": "^0.21.3",
     "socket.io": "^2.2.0",
-    "socket.io-client": "^2.2.0",
-    "sockette": "^2.0.5",
-    "sockjs": "^0.3.19"
+    "socket.io-client": "^2.2.0"
   },
   "devDependencies": {
     "husky": "^1.3.1",
