setup docker from local

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,11 @@
-MONGODB_URL=""
-CHANNEL_ID=""
-CHANNEL_SECRET=""
-CHANNEL_ACCESS_TOKEN=""
-HOSTNAME=""
-MONGO_INITDB_ROOT_USERNAME:""
-MONGO_INITDB_ROOT_PASSWORD:""
+CHANNEL_ID=
+CHANNEL_SECRET=
+CHANNEL_ACCESS_TOKEN=
+
+HOSTNAME=
+PORT=
+
+MONGO_HOST=
+MONGO_INITDB_ROOT_USERNAME=
+MONGO_INITDB_ROOT_PASSWORD=
+MONGO_INITDB_DATABASE=
