--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Server for a line messenger bot",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "NODE_ENV=production node ./bin/www",
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
