--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^5.4.14",
     "mongoose-timestamp": "^0.6.0",
     "morgan": "~1.9.0",
+    "multer": "^1.4.1",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0"
   },
