--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "WEBHOSTNAME=https://vasilenka.github.io/simba-client/# node_modules/.bin/nodemon ./bin/www"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.5",
@@ -25,7 +26,8 @@
     "morgan": "~1.9.0",
     "multer": "^1.4.1",
     "socket.io": "^2.2.0",
-    "socket.io-client": "^2.2.0"
+    "socket.io-client": "^2.2.0",
+    "validator": "^10.11.0"
   },
   "devDependencies": {
     "husky": "^1.3.1",
