--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "cors": "^2.8.5",
     "dayjs": "^1.8.6",
     "debug": "~2.6.9",
+    "dotenv": "^7.0.0",
     "express": "~4.16.0",
+    "jsonwebtoken": "^8.5.0",
     "linebot": "^1.4.1",
     "lodash.isboolean": "^3.0.3",
     "lodash.pick": "^4.4.0",
